--- a/ClientApp/src/app/footer/footer.component.html
+++ b/ClientApp/src/app/footer/footer.component.html
@@ -9,3 +9,11 @@
         </div>
     </div>
 </div>
+
+<!-- <footer>
+    <p>©
+        <span id="copyright-year">2020</span>
+        <script>document.getElementById('copyright-year').textContent = new Date().getFullYear().toString();</script>
+        5Star Life Insurance Company, an AFBA related enterprise
+    </p>
+</footer> -->
