--- a/ClientApp/src/app/accident/accident.component.html
+++ b/ClientApp/src/app/accident/accident.component.html
@@ -1,66 +1,41 @@
 
+ <div class="container">
+<div class="row">
+<div class="col-3">
+  <span class ="label label-default">Date</span>
+    <input type="date" class="form-control mb-2 " style="width: 100%;" id="inlineFormInputName2"
+      placeholder="Group Effective Date">
 
-<mat-accordion>
-  <mat-expansion-panel>
-    <mat-expansion-panel-header>
-      <mat-panel-title>
-        Accident
-      </mat-panel-title>
-    </mat-expansion-panel-header>
-    <div class="appmt-container">
-    <!-- <mat-form-field appearance="fill">
-      <mat-label>Enter Products</mat-label>
-      <input matInput #input maxlength="10" placeholder="Product Name">
-    
-    </mat-form-field> -->
-
-    <mat-form-field class="appmt-full-width">
-        <mat-label>Choose a date</mat-label>
-        <input matInput [matDatepicker]="picker">
-        <mat-datepicker-toggle matSuffix [for]="picker">
-          <mat-icon matDatepickerToggleIcon>keyboard_arrow_down</mat-icon>
-        </mat-datepicker-toggle>
-        <mat-datepicker #picker></mat-datepicker>
-      </mat-form-field>
-      
-    <mat-form-field appearance="fill">
-      <mat-label>Select me</mat-label>
-      <mat-select>
-        <mat-option value="option">Accident Situs State</mat-option>
-      </mat-select>
-    
-    </mat-form-field>
-
+</div>
+  
+    <div class="col-3">
+      <span class ="label label-default">Accident Situs State</span>
+      <select class="form-control " id="inlineFormCustomSelectPref">
+        <option selected>Select Group Payment</option>
+        <option value="1">Accident Situs State</option>
+      </select>
+    </div>
+</div>
   </div>
-    <div class="appmt-container">
-      <div class="row mt-4">
-        <mat-checkbox style="margin-right: 20px;" [(ngModel)]="checked"></mat-checkbox>
-        <!-- <table class="ml-2">
-          <th style="padding: 4px; background: #2980b9; 
-          background: -webkit-linear-gradient(to right, #2980b9, #6dd5fa, #ffffff);
-          background: linear-gradient(to right, #2980b9, #6dd5fa, #ffffff);">
-            Accident Rate Level
-          </th>
-          <tr>
-            <h5>1,2 or 3
-            </h5>
-          </tr>
-        </table> -->
-        <mat-form-field appearance="fill">
-          <mat-label> Accident Rate Level</mat-label>
-          <mat-select>
-            <mat-option value="option">1</mat-option>
-            <mat-option value="option">2</mat-option>
-            <mat-option value="option">3</mat-option>
-          </mat-select>
+    <div class="container">
+      <div class="row">
         
-        </mat-form-field>
+       
+        <input style="margin-top: 8px" type="checkbox">
+        <div class="col-3 mb-2">
+          <span class ="label label-default">Accident Rate Level</span>
+          
+          <select class="form-control">
+            <option selected value="option">1</option>
+            <option value="option">2</option>
+            <option value="option">3</option>
+          </select>
+        </div>
         
     </div>
     </div>
      <app-agent-setup></app-agent-setup>
-  </mat-expansion-panel>
-</mat-accordion>
+ 
 
 
    
