--- a/ClientApp/src/app/fpp-individual/fpp-individual.component.html
+++ b/ClientApp/src/app/fpp-individual/fpp-individual.component.html
@@ -1,1 +1,144 @@
-<p>fpp-individual works!</p>
+
+    <div class="container" style="width: 100%;">
+        <div class="row">
+  
+          <div class="col-3">
+            <span class ="label label-default">Date</span>
+              <input type="date" class="form-control mb-2 " style="width: 100%;" id="inlineFormInputName2"
+                placeholder="FPP Individual Effective Date">
+          
+          </div>
+       
+        <div class="col-3">
+          <span class ="label label-default">Agent Signature</span>
+          <input type="text" class="form-control mb-2 " style="width: 100%;" id="inlineFormInputName2"
+                placeholder="Agent Signature">
+        </div>
+        </div>
+        
+      </div>
+     
+     
+      
+  
+     <div class="container">
+  <div class="row">
+      
+  <div class="col-3">
+    <input class="form-check-input" type="radio" name="Radios" id="Radios1" value="option1" checked>
+    
+              <input type="text" class="form-control mb-2 " style="width: 100%;" id="inlineFormInputName2"
+                placeholder="Employee GI Amount">
+  </div>
+  <div class="col-3">
+    <input class="form-check-input" type="radio" name="Radios" id="Radios1" value="option1" checked>
+              <input type="text" class="form-control mb-2 " style="width: 100%;" id="inlineFormInputName2"
+                placeholder="Employee QI Amount Max">
+  </div>
+  <div class="col-3">
+    <input class="form-check-input" type="radio" name="Radios" id="Radios1" value="option1" checked>
+              <input type="text" class="form-control mb-2 " style="width: 100%;" id="inlineFormInputName2"
+                placeholder="Employee Max Amount">
+  </div>
+  
+  </div>
+  
+  <div class="row">
+      
+    <div class="col-3">
+      <input class="form-check-input" type="radio" name="Radios" id="Radios1" value="option1" checked>
+      
+                <input type="text" class="form-control mb-2 " style="width: 100%;" id="inlineFormInputName2"
+                  placeholder="Spouse GI Amount Max
+                  ">
+    </div>
+    <div class="col-3">
+      <input class="form-check-input" type="radio" name="Radios" id="Radios1" value="option1" checked>
+                <input type="text" class="form-control mb-2 " style="width: 100%;" id="inlineFormInputName2"
+                  placeholder="Spouse QI Amount Max">
+    </div>
+    <div class="col-3">
+      <input class="form-check-input" type="radio" name="Radios" id="Radios1" value="option1" checked>
+                <input type="text" class="form-control mb-2 " style="width: 100%;" id="inlineFormInputName2"
+                  placeholder="Spouse Max Amount">
+    </div>
+    
+    </div>
+    <div class="row">
+      
+      <div class="col-3">
+        <input class="form-check-input" type="radio" name="Radios" id="Radios1" value="option1" checked>
+        
+                  <input type="text" class="form-control mb-2 " style="width: 100%;" id="inlineFormInputName2"
+                    placeholder="Child GI Amount Max">
+      </div>
+      <div class="col-3">
+        <input class="form-check-input" type="radio" name="Radios" id="Radios1" value="option1" checked>
+                  <input type="text" class="form-control mb-2 " style="width: 100%;" id="inlineFormInputName2"
+                    placeholder="Child QI Amount Max">
+      </div>
+      <div class="col-3">
+        <input class="form-check-input" type="radio" name="Radios" id="Radios1" value="option1" checked>
+                  <input type="text" class="form-control mb-2 " style="width: 100%;" id="inlineFormInputName2"
+                    placeholder="Child Max Amount">
+      </div>
+      
+      </div>
+  
+  
+  
+      <div class="row">
+      
+        <div class="col-3">
+          <input class="form-check-input" type="radio" name="Radios" id="Radios1" value="option1" checked>
+          
+                    <input type="text" class="form-control mb-2 " style="width: 100%;" id="inlineFormInputName2"
+                      placeholder="Open Enrollment GI
+                      ">
+        </div>
+        <div class="col-3">
+           
+                      <input type="text" class="form-control mb-2 " style="width: 100%;" id="inlineFormInputName2"
+                        placeholder="User Token
+                        ">
+          </div>
+          <div class="col-3">
+          
+            
+                      <input type="text" class="form-control mb-2 " style="width: 100%;" id="inlineFormInputName2"
+                        placeholder="Case Token
+                        ">
+          </div>
+       
+        
+        </div>
+  
+     </div>
+  
+    
+  <div class="container">
+     
+        <div class="row mt-8">
+  
+          <table>
+            <th style="padding: 4px; background: #2980b9; 
+              background: -webkit-linear-gradient(to right, #2980b9, #6dd5fa, #ffffff);
+              background: linear-gradient(to right, #2980b9, #6dd5fa, #ffffff);">
+              Riders
+            </th>
+            <tr>
+              <div>
+                <mat-checkbox class="example-margin" [(ngModel)]="checked">QOL Rider</mat-checkbox>
+              </div>
+              <div>
+                <mat-checkbox class="example-margin" [(ngModel)]="indeterminate">Waiver</mat-checkbox>
+              </div>
+  
+  
+            </tr>
+          </table>
+        </div>
+      </div>
+  
+      <app-agent-setup></app-agent-setup>
+   
