--- a/ClientApp/src/app/fppg/fppg.component.html
+++ b/ClientApp/src/app/fppg/fppg.component.html
@@ -1,126 +1,112 @@
-<mat-accordion>
-  <mat-expansion-panel>
-    <mat-expansion-panel-header>
-      <mat-panel-title>
-        FPPG
-      </mat-panel-title>
-    </mat-expansion-panel-header>
-    <div class="appmt-container" style="width: 100%;">
-      <!-- <mat-form-field appearance="fill" >
-        <mat-label>Enter Products</mat-label>
-        <input matInput placeholder="Product Name">
 
-      </mat-form-field> -->
+    <div class="container" style="width: 100%;">
+      <div class="row">
 
-      <mat-form-field class="appmt-full-width">
-        <mat-label>Choose a date</mat-label>
-        <input matInput [matDatepicker]="picker">
-        <mat-datepicker-toggle matSuffix [for]="picker">
-       
-        </mat-datepicker-toggle>
-        <mat-datepicker #picker></mat-datepicker>
-      </mat-form-field>
+        <div class="col-3">
+          <span class ="label label-default">Date</span>
+            <input type="date" class="form-control mb-2 " style="width: 100%;" id="inlineFormInputName2"
+              placeholder="Group Effective Date">
+        
+        </div>
+     
+      <div class="col-3">
+        <span class ="label label-default">Group Payment Mode</span>
+        <select class="form-control" id="inlineFormCustomSelectPref">
+          <option selected>Select Group Payment</option>
+          <option value="1">Group Payment Mode</option>
+        </select>
+      </div>
+      </div>
+      
+    </div>
+   
+   
+    
 
-      <mat-form-field appearance="fill">
-        <mat-label>Select me</mat-label>
-        <mat-select>
-          <mat-option value="option">Accident Situs State</mat-option>
-        </mat-select>
-       
-      </mat-form-field>
+   <div class="container">
+<div class="row">
+    
+<div class="col-3">
+  <input class="form-check-input" type="radio" name="Radios" id="Radios1" value="option1" checked>
+  
+            <input type="text" class="form-control mb-2 " style="width: 100%;" id="inlineFormInputName2"
+              placeholder="Employee GI Amount Max">
+</div>
+<div class="col-3">
+  <input class="form-check-input" type="radio" name="Radios" id="Radios1" value="option1" checked>
+            <input type="text" class="form-control mb-2 " style="width: 100%;" id="inlineFormInputName2"
+              placeholder="Employee QI Amount Max">
+</div>
+<div class="col-3">
+  <input class="form-check-input" type="radio" name="Radios" id="Radios1" value="option1" checked>
+            <input type="text" class="form-control mb-2 " style="width: 100%;" id="inlineFormInputName2"
+              placeholder="Employee Max Amount">
+</div>
+
+</div>
+
+<div class="row">
+    
+  <div class="col-3">
+    <input class="form-check-input" type="radio" name="Radios" id="Radios1" value="option1" checked>
+    
+              <input type="text" class="form-control mb-2 " style="width: 100%;" id="inlineFormInputName2"
+                placeholder="Spouse GI Amount Max
+                ">
+  </div>
+  <div class="col-3">
+    <input class="form-check-input" type="radio" name="Radios" id="Radios1" value="option1" checked>
+              <input type="text" class="form-control mb-2 " style="width: 100%;" id="inlineFormInputName2"
+                placeholder="Spouse QI Amount Max">
+  </div>
+  <div class="col-3">
+    <input class="form-check-input" type="radio" name="Radios" id="Radios1" value="option1" checked>
+              <input type="text" class="form-control mb-2 " style="width: 100%;" id="inlineFormInputName2"
+                placeholder="Spouse Max Amount">
+  </div>
+  
+  </div>
+  <div class="row">
+    
+    <div class="col-3">
+      <input class="form-check-input" type="radio" name="Radios" id="Radios1" value="option1" checked>
+      
+                <input type="text" class="form-control mb-2 " style="width: 100%;" id="inlineFormInputName2"
+                  placeholder="Child GI Amount Max">
+    </div>
+    <div class="col-3">
+      <input class="form-check-input" type="radio" name="Radios" id="Radios1" value="option1" checked>
+                <input type="text" class="form-control mb-2 " style="width: 100%;" id="inlineFormInputName2"
+                  placeholder="Child QI Amount Max">
+    </div>
+    <div class="col-3">
+      <input class="form-check-input" type="radio" name="Radios" id="Radios1" value="option1" checked>
+                <input type="text" class="form-control mb-2 " style="width: 100%;" id="inlineFormInputName2"
+                  placeholder="Child Max Amount">
+    </div>
+    
     </div>
 
 
-    <div class="appmt-container">
-      <mat-radio-group aria-label="Select an option">
-        <mat-radio-button value="1"></mat-radio-button>
-      </mat-radio-group>
-      <mat-form-field hintLabel="Max 10 characters" appearance="fill">
-        <mat-label>Enter Products</mat-label>
-        <input matInput #input maxlength="10" placeholder="Product Name">
-      </mat-form-field>
 
+    <div class="row">
+    
+      <div class="col-3">
+        <input class="form-check-input" type="radio" name="Radios" id="Radios1" value="option1" checked>
+        
+                  <input type="text" class="form-control mb-2 " style="width: 100%;" id="inlineFormInputName2"
+                    placeholder="Open Enrollment GI
+                    ">
+      </div>
+     
+      
+      </div>
 
+   </div>
 
-      <mat-form-field hintLabel="Max 10 characters" appearance="fill">
-        <mat-label>Enter Products</mat-label>
-        <input matInput #input maxlength="10" placeholder="Product Name">
-
-      </mat-form-field>
-
-      <mat-form-field hintLabel="Max 10 characters" appearance="fill">
-        <mat-label>Enter Products</mat-label>
-        <input matInput #input maxlength="10" placeholder="Product Name">
-
-      </mat-form-field>
-
-
-
-    </div>
-
-    <div class="appmt-container">
-      <mat-radio-group aria-label="Select an option">
-        <mat-radio-button value="1"></mat-radio-button>
-      </mat-radio-group>
-      <mat-form-field hintLabel="Max 10 characters" appearance="fill">
-        <mat-label>Enter Products</mat-label>
-        <input matInput #input maxlength="10" placeholder="Product Name">
-      </mat-form-field>
-
-
-
-      <mat-form-field hintLabel="Max 10 characters" appearance="fill">
-        <mat-label>Enter Products</mat-label>
-        <input matInput #input maxlength="10" placeholder="Product Name">
-
-      </mat-form-field>
-
-      <mat-form-field hintLabel="Max 10 characters" appearance="fill">
-        <mat-label>Enter Products</mat-label>
-        <input matInput #input maxlength="10" placeholder="Product Name">
-
-      </mat-form-field>
-
-
-
-    </div>
-
-    <div class="appmt-container">
-      <mat-radio-group aria-label="Select an option">
-        <mat-radio-button value="1"></mat-radio-button>
-      </mat-radio-group>
-      <mat-form-field hintLabel="Max 10 characters" appearance="fill">
-        <mat-label>Enter Products</mat-label>
-        <input matInput #input maxlength="10" placeholder="Product Name">
-      </mat-form-field>
-
-
-
-      <mat-form-field hintLabel="Max 10 characters" appearance="fill">
-        <mat-label>Enter Products</mat-label>
-        <input matInput #input maxlength="10" placeholder="Product Name">
-      </mat-form-field>
-
-      <mat-form-field hintLabel="Max 10 characters" appearance="fill">
-        <mat-label>Enter Products</mat-label>
-        <input matInput #input maxlength="10" placeholder="Product Name">
-
-      </mat-form-field>
-
-    </div>
-
-    <div class="appmt-container">
-      <mat-radio-group aria-label="Select an option">
-        <mat-radio-button value="1"></mat-radio-button>
-      </mat-radio-group>
-      <mat-form-field hintLabel="Max 10 characters" appearance="fill">
-        <mat-label>Enter Products</mat-label>
-        <input matInput #input maxlength="10" placeholder="Product Name">
-      </mat-form-field>
-
-    </div>
-
-    <div class="appmt-container">
+  
+<div class="container">
+   
       <div class="row mt-8">
 
         <table>
@@ -144,5 +130,4 @@
     </div>
 
     <app-agent-setup></app-agent-setup>
-  </mat-expansion-panel>
-</mat-accordion>
+ 
