--- a/ClientApp/src/app/hospital-indemnity/hospital-indemnity.component.html
+++ b/ClientApp/src/app/hospital-indemnity/hospital-indemnity.component.html
@@ -1,37 +1,26 @@
-<mat-accordion>
-  <mat-expansion-panel>
-    <mat-expansion-panel-header>
-      <mat-panel-title>
-        Hospital Indemnity
-      </mat-panel-title>
-    </mat-expansion-panel-header>
-    <div class="appmt-container">
-      <mat-form-field hintLabel="Max 10 characters" appearance="fill">
-        <mat-label>Enter Products</mat-label>
-        <input matInput #input maxlength="10" placeholder="Product Name">
-      
-      </mat-form-field>
-  
-      <mat-form-field class="appmt-full-width">
-          <mat-label>Choose a date</mat-label>
-          <input matInput [matDatepicker]="picker">
-          <mat-datepicker-toggle matSuffix [for]="picker">
-            <mat-icon matDatepickerToggleIcon>keyboard_arrow_down</mat-icon>
-          </mat-datepicker-toggle>
-          <mat-datepicker #picker></mat-datepicker>
-        </mat-form-field>
+
+    <div class="container">
+      <div class="row">
+        <div class="col-3">
+          <span class ="label label-default">Hospital Indemnity Effective Date
+            </span>
+            <input type="date" class="form-control mb-2 " style="width: 100%;" id="inlineFormInputName2"
+              placeholder="Hospital Indemnity Effective Date">
         
-      <mat-form-field appearance="fill">
-        <mat-label>Select me</mat-label>
-        <mat-select>
-          <mat-option value="option">Accident Situs State</mat-option>
-        </mat-select>
-        <mat-hint align="end">Here's the dropdown arrow ^</mat-hint>
-      </mat-form-field>
+        </div>
+          
+            <div class="col-3">
+              <span class ="label label-default"> Hospital Situs State</span>
+              <select class="form-control " id="inlineFormCustomSelectPref">
+                <option selected>Select Situs State</option>
+                <option value="1"> Hospital Situs State</option>
+              </select>
+            </div>
+        </div>
+  
+     
     </div>
     <app-agent-setup></app-agent-setup>
-    </mat-expansion-panel>
-    </mat-accordion>
 
 
 
