--- a/ClientApp/src/app/group-setup/group-setup.component.html
+++ b/ClientApp/src/app/group-setup/group-setup.component.html
@@ -104,14 +104,14 @@
     <button class="btn btn-primary" (click)="addemployerPaidCi('EmployerPaidCI')"> Employer Paid CI</button>
   </div>
   <div class="col">
-    <button class="btn btn-primary" (click)="addvoluntaryCi('VoluntaryCI')"> Voluntary CI
+    <button class="btn btn-primary" > Voluntary CI
     </button>
   </div>
   <div class="col">
-    <button class="btn btn-primary" (click)="addvolGroup('VolGroupLife')">Vol Group Life</button>
+    <button class="btn btn-primary" >Vol Group Life</button>
   </div>
   <div class="col">
-    <button class="btn btn-primary" (click)="addbasicGroup('BasicGroupLife')">Basic Group Life</button>
+    <button class="btn btn-primary">Basic Group Life</button>
   </div>
 </div>
     <!-- Product section -->
