--- a/ClientApp/src/app/fpp-individual/fpp-individual.component.html
+++ b/ClientApp/src/app/fpp-individual/fpp-individual.component.html
@@ -4,14 +4,14 @@
   
           <div class="col-3">
             <span class ="label label-default">Date</span>
-              <input type="date" class="form-control mb-2 " style="width: 100%;" id="inlineFormInputName2"
+              <input type="date" class="form-control mb-2 " style="width: 100%;" 
                 placeholder="FPP Individual Effective Date">
           
           </div>
        
         <div class="col-3">
           <span class ="label label-default">Agent Signature</span>
-          <input type="text" class="form-control mb-2 " style="width: 100%;" id="inlineFormInputName2"
+          <input type="text" class="form-control mb-2 " style="width: 100%;" 
                 placeholder="Agent Signature">
         </div>
         </div>
@@ -27,17 +27,17 @@
   <div class="col-3">
     <input class="form-check-input" type="radio" name="Radios" id="Radios1" value="option1" checked>
     
-              <input type="text" class="form-control mb-2 " style="width: 100%;" id="inlineFormInputName2"
+              <input type="text" class="form-control mb-2 " style="width: 100%;" 
                 placeholder="Employee GI Amount">
   </div>
   <div class="col-3">
     <input class="form-check-input" type="radio" name="Radios" id="Radios1" value="option1" checked>
-              <input type="text" class="form-control mb-2 " style="width: 100%;" id="inlineFormInputName2"
+              <input type="text" class="form-control mb-2 " style="width: 100%;" 
                 placeholder="Employee QI Amount Max">
   </div>
   <div class="col-3">
     <input class="form-check-input" type="radio" name="Radios" id="Radios1" value="option1" checked>
-              <input type="text" class="form-control mb-2 " style="width: 100%;" id="inlineFormInputName2"
+              <input type="text" class="form-control mb-2 " style="width: 100%;" 
                 placeholder="Employee Max Amount">
   </div>
   
@@ -48,18 +48,18 @@
     <div class="col-3">
       <input class="form-check-input" type="radio" name="Radios" id="Radios1" value="option1" checked>
       
-                <input type="text" class="form-control mb-2 " style="width: 100%;" id="inlineFormInputName2"
+                <input type="text" class="form-control mb-2 " style="width: 100%;" 
                   placeholder="Spouse GI Amount Max
                   ">
     </div>
     <div class="col-3">
       <input class="form-check-input" type="radio" name="Radios" id="Radios1" value="option1" checked>
-                <input type="text" class="form-control mb-2 " style="width: 100%;" id="inlineFormInputName2"
+                <input type="text" class="form-control mb-2 " style="width: 100%;" 
                   placeholder="Spouse QI Amount Max">
     </div>
     <div class="col-3">
       <input class="form-check-input" type="radio" name="Radios" id="Radios1" value="option1" checked>
-                <input type="text" class="form-control mb-2 " style="width: 100%;" id="inlineFormInputName2"
+                <input type="text" class="form-control mb-2 " style="width: 100%;" 
                   placeholder="Spouse Max Amount">
     </div>
     
@@ -69,17 +69,17 @@
       <div class="col-3">
         <input class="form-check-input" type="radio" name="Radios" id="Radios1" value="option1" checked>
         
-                  <input type="text" class="form-control mb-2 " style="width: 100%;" id="inlineFormInputName2"
+                  <input type="text" class="form-control mb-2 " style="width: 100%;" 
                     placeholder="Child GI Amount Max">
       </div>
       <div class="col-3">
         <input class="form-check-input" type="radio" name="Radios" id="Radios1" value="option1" checked>
-                  <input type="text" class="form-control mb-2 " style="width: 100%;" id="inlineFormInputName2"
+                  <input type="text" class="form-control mb-2 " style="width: 100%;" 
                     placeholder="Child QI Amount Max">
       </div>
       <div class="col-3">
         <input class="form-check-input" type="radio" name="Radios" id="Radios1" value="option1" checked>
-                  <input type="text" class="form-control mb-2 " style="width: 100%;" id="inlineFormInputName2"
+                  <input type="text" class="form-control mb-2 " style="width: 100%;" 
                     placeholder="Child Max Amount">
       </div>
       
@@ -92,20 +92,20 @@
         <div class="col-3">
           <input class="form-check-input" type="radio" name="Radios" id="Radios1" value="option1" checked>
           
-                    <input type="text" class="form-control mb-2 " style="width: 100%;" id="inlineFormInputName2"
+                    <input type="text" class="form-control mb-2 " style="width: 100%;" 
                       placeholder="Open Enrollment GI
                       ">
         </div>
         <div class="col-3">
            
-                      <input type="text" class="form-control mb-2 " style="width: 100%;" id="inlineFormInputName2"
+                      <input type="text" class="form-control mb-2 " style="width: 100%;" 
                         placeholder="User Token
                         ">
           </div>
           <div class="col-3">
           
             
-                      <input type="text" class="form-control mb-2 " style="width: 100%;" id="inlineFormInputName2"
+                      <input type="text" class="form-control mb-2 " style="width: 100%;" 
                         placeholder="Case Token
                         ">
           </div>
@@ -128,10 +128,10 @@
             </th>
             <tr>
                <div>
-                <mat-checkbox class="example-margin" [(ngModel)]="checked">QOL Rider</mat-checkbox>
+                <mat-checkbox class="margin" [(ngModel)]="checked">QOL Rider</mat-checkbox>
               </div>
               <div>
-                <mat-checkbox class="example-margin" [(ngModel)]="indeterminate">Waiver</mat-checkbox>
+                <mat-checkbox class="margin" [(ngModel)]="indeterminate">Waiver</mat-checkbox>
               </div>
    
   
