--- a/ClientApp/src/app/hospital-indemnity/hospital-indemnity.component.html
+++ b/ClientApp/src/app/hospital-indemnity/hospital-indemnity.component.html
@@ -4,7 +4,7 @@
         <div class="col-3">
           <span class ="label label-default">Hospital Indemnity Effective Date
             </span>
-            <input type="date" class="form-control mb-2 " style="width: 100%;" id="inlineFormInputName2"
+            <input type="date" class="form-control mb-2 " style="width: 100%;" id=""
               placeholder="Hospital Indemnity Effective Date">
         
         </div>
