--- a/ClientApp/src/app/accident/accident.component.html
+++ b/ClientApp/src/app/accident/accident.component.html
@@ -3,7 +3,7 @@
 <div class="row">
 <div class="col-3">
   <span class ="label label-default">Date</span>
-    <input type="date" class="form-control mb-2 " style="width: 100%;" id="inlineFormInputName2"
+    <input type="date" class="form-control mb-2 " style="width: 100%;" 
       placeholder="Group Effective Date">
 
 </div>
