--- a/ClientApp/src/app/employer-paid-ci/employer-paid-ci.component.html
+++ b/ClientApp/src/app/employer-paid-ci/employer-paid-ci.component.html
@@ -3,7 +3,7 @@
     <div class="row">
     <div class="col-3">
       <span class ="label label-default">Date</span>
-        <input type="date" class="form-control mb-2 " style="width: 100%;" id="inlineFormInputName2"
+        <input type="date" class="form-control mb-2 " style="width: 100%;" 
           placeholder="Employer Paid CI Effective
           Date">
     
@@ -25,20 +25,20 @@
         <div class="col-3">
           <input class="form-check-input" type="radio" name="Radios" id="Radios1" value="option1" checked>
           
-                    <input type="text" class="form-control mb-2 " style="width: 100%;" id="inlineFormInputName2"
+                    <input type="text" class="form-control mb-2 " style="width: 100%;" 
                       placeholder="Spouse Standard Face
                       Amount
                       ">
         </div>
         <div class="col-3">
           <input class="form-check-input" type="radio" name="Radios" id="Radios1" value="option1" checked>
-                    <input type="text" class="form-control mb-2 " style="width: 100%;" id="inlineFormInputName2"
+                    <input type="text" class="form-control mb-2 " style="width: 100%;" 
                       placeholder="Employee Standard Face
                       Amount">
         </div>
         <div class="col-3">
         
-                    <input type="text" class="form-control mb-2 " style="width: 100%;" id="inlineFormInputName2"
+                    <input type="text" class="form-control mb-2 " style="width: 100%;" 
                       placeholder="Child Standard Face Amount">
         </div>
         
