--- a/ClientApp/src/app/fppg/fppg.component.html
+++ b/ClientApp/src/app/fppg/fppg.component.html
@@ -4,7 +4,7 @@
 
         <div class="col-3">
           <span class ="label label-default">Date</span>
-            <input type="date" class="form-control mb-2 " style="width: 100%;" id="inlineFormInputName2"
+            <input type="date" class="form-control mb-2 " style="width: 100%;" 
               placeholder="Group Effective Date">
         
         </div>
@@ -29,17 +29,17 @@
 <div class="col-3">
   <input class="form-check-input" type="radio" name="Radios" id="Radios1" value="option1" checked>
   
-            <input type="text" class="form-control mb-2 " style="width: 100%;" id="inlineFormInputName2"
+            <input type="text" class="form-control mb-2 " style="width: 100%;" 
               placeholder="Employee GI Amount Max">
 </div>
 <div class="col-3">
   <input class="form-check-input" type="radio" name="Radios" id="Radios1" value="option1" checked>
-            <input type="text" class="form-control mb-2 " style="width: 100%;" id="inlineFormInputName2"
+            <input type="text" class="form-control mb-2 " style="width: 100%;" 
               placeholder="Employee QI Amount Max">
 </div>
 <div class="col-3">
   <input class="form-check-input" type="radio" name="Radios" id="Radios1" value="option1" checked>
-            <input type="text" class="form-control mb-2 " style="width: 100%;" id="inlineFormInputName2"
+            <input type="text" class="form-control mb-2 " style="width: 100%;" 
               placeholder="Employee Max Amount">
 </div>
 
@@ -50,18 +50,18 @@
   <div class="col-3">
     <input class="form-check-input" type="radio" name="Radios" id="Radios1" value="option1" checked>
     
-              <input type="text" class="form-control mb-2 " style="width: 100%;" id="inlineFormInputName2"
+              <input type="text" class="form-control mb-2 " style="width: 100%;" 
                 placeholder="Spouse GI Amount Max
                 ">
   </div>
   <div class="col-3">
     <input class="form-check-input" type="radio" name="Radios" id="Radios1" value="option1" checked>
-              <input type="text" class="form-control mb-2 " style="width: 100%;" id="inlineFormInputName2"
+              <input type="text" class="form-control mb-2 " style="width: 100%;" 
                 placeholder="Spouse QI Amount Max">
   </div>
   <div class="col-3">
     <input class="form-check-input" type="radio" name="Radios" id="Radios1" value="option1" checked>
-              <input type="text" class="form-control mb-2 " style="width: 100%;" id="inlineFormInputName2"
+              <input type="text" class="form-control mb-2 " style="width: 100%;" 
                 placeholder="Spouse Max Amount">
   </div>
   
@@ -71,17 +71,17 @@
     <div class="col-3">
       <input class="form-check-input" type="radio" name="Radios" id="Radios1" value="option1" checked>
       
-                <input type="text" class="form-control mb-2 " style="width: 100%;" id="inlineFormInputName2"
+                <input type="text" class="form-control mb-2 " style="width: 100%;" 
                   placeholder="Child GI Amount Max">
     </div>
     <div class="col-3">
       <input class="form-check-input" type="radio" name="Radios" id="Radios1" value="option1" checked>
-                <input type="text" class="form-control mb-2 " style="width: 100%;" id="inlineFormInputName2"
+                <input type="text" class="form-control mb-2 " style="width: 100%;" 
                   placeholder="Child QI Amount Max">
     </div>
     <div class="col-3">
       <input class="form-check-input" type="radio" name="Radios" id="Radios1" value="option1" checked>
-                <input type="text" class="form-control mb-2 " style="width: 100%;" id="inlineFormInputName2"
+                <input type="text" class="form-control mb-2 " style="width: 100%;" 
                   placeholder="Child Max Amount">
     </div>
     
@@ -94,7 +94,7 @@
       <div class="col-3">
         <input class="form-check-input" type="radio" name="Radios" id="Radios1" value="option1" checked>
         
-                  <input type="text" class="form-control mb-2 " style="width: 100%;" id="inlineFormInputName2"
+                  <input type="text" class="form-control mb-2 " style="width: 100%;" 
                     placeholder="Open Enrollment GI
                     ">
       </div>
