--- a/ClientApp/src/app/group-setup/group-setup.component.css
+++ b/ClientApp/src/app/group-setup/group-setup.component.css
@@ -27,6 +27,56 @@
     line-height: 1.5 !important;
     color: #495057 !important;
 }
-.mat-form-field {
-    width: 100% !important;
+/* .panel-group .panel {
+    border-radius: 0;
+    box-shadow: none;
+    border-color: #EEEEEE;
 }
+
+.panel-default > .panel-heading {
+    padding: 0;
+    border-radius: 0;
+    color: #212121;
+    background-color: #FAFAFA;
+    border-color: #EEEEEE;
+}
+
+.panel-title {
+    font-size: 14px;
+}
+
+.panel-title > a {
+    display: block;
+    padding: 15px;
+    text-decoration: none;
+}
+
+.more-less {
+    float: right;
+    color: #212121;
+}
+
+.panel-default > .panel-heading + .panel-collapse > .panel-body {
+    border-top-color: #EEEEEE;
+}
+
+
+body {
+background-color: #26a69a;
+}
+
+.demo {
+padding-top: 60px;
+padding-bottom: 60px;
+} */
+
+.accordion .card-header:after {
+    font-family: 'FontAwesome' ;  
+    content: "\f068" ;
+    float: right ; 
+  }
+  .accordion .card-header.collapsed:after {
+    /* symbol for "collapsed" panels */
+    content: "\f067"; 
+  }
+
