--- a/ClientApp/src/app/group-setup/group-setup.component.html
+++ b/ClientApp/src/app/group-setup/group-setup.component.html
@@ -4,42 +4,41 @@
     <div class="row">
       <div class="col-md-3">
         <span class ="label label-default">Group Number</span>
-        <input type="text" class="form-control mb-2" style="width: 100%;" id="inlineFormInputName2"
+        <input type="text" class="form-control mb-2" style="width: 100%;" 
           placeholder="Group Number Field">
       </div>
       <div class="col-md-3">
         <span class ="label label-default">Group Name</span>
-        <input type="text" class="form-control mb-2 " style="width: 100%;" id="inlineFormInputName2"
+        <input type="text" class="form-control mb-2 " style="width: 100%;" 
           placeholder="Group Name Field">
       </div>
       <div class="col-md-3">
         <span class ="label label-default">Date</span>
-        <input type="date" class="form-control mb-2 " style="width: 100%;" id="inlineFormInputName2"
+        <input type="date" class="form-control mb-2 " style="width: 100%;" 
           placeholder="Group Effective Date">
       </div>
       <div class="col-md-3">
         <span class ="label label-default">Group Payment Mode</span>
-        <select class="select-dropdown my-1 " id="inlineFormCustomSelectPref">
-          <option selected>Select Group Payment</option>
-          <option value="1">Group Payment Mode</option>
+        <select class="select-dropdown my-1" >
+          <option selected *ngFor = "let lookupvalue of lookUpData">{{lookupvalue}}</option>
         </select>
       </div>
     </div>
     <div class="row">
       <div class="col-md-3">
         <span class ="label label-default">Group Vendor</span>
-        <input type="text" class="form-control mb-2 " id="inlineFormInputName2" placeholder="Group Vendor Name">
+        <input type="text" class="form-control mb-2 "  placeholder="Group Vendor Name">
       </div>
 
       <div class="col-md-3">
         <span class ="label label-default">Group Vendor Email</span>
-        <input type="text" class="form-control mb-2" id="inlineFormInputName2"
+        <input type="text" class="form-control mb-2" 
           placeholder="Group Vendor Email Address">
       </div>
       <div class="col-md-3">
         <div>
           <span class ="label label-default">Occupation Class</span>
-          <select class="select-dropdown my-1 " id="inlineFormCustomSelectPref">
+          <select class="select-dropdown my-1 " >
             <option selected>Select Occupation Class</option>
             <option value="1">Occ Class</option>
           </select>
@@ -48,7 +47,7 @@
       </div>
       <div class="col-md-3">
         <span class ="label label-default">New Hire</span>
-        <select class="select-dropdown my-1 " id="inlineFormCustomSelectPref">
+        <select class="select-dropdown my-1 " >
           <option selected>Select New hire</option>
           <option value="1">30</option>
           <option value="2">60</option>
@@ -84,154 +83,94 @@
         </select>
       </div>
     </div>
-<div class="row mb-4">
-  <div class="col">
-    <button type="button" class="btn btn-primary"  (click)="addAccident('Accident')">
-      <i class="fa fa-plus" aria-hidden="true"></i> Accident</button> 
-  </div>
-  <div class="col">
-    <button class="btn btn-primary" (click)="addfppg('FPPG')"> <span class="glyphicon glyphicon-plus"></span>FPPG</button>
-  </div>
-  <div class="col">
-    <button class="btn btn-primary "(click)="addhospitalIndemity('HospitalIndemnity')">  <span class="glyphicon glyphicon-plus"></span>Hospital Indemnity</button>
-  </div>
-  <div class="col">
-    <button class="btn btn-primary" (click)="addfppIndivisual('FPPIndividual')"> FPP Individual</button>
-  </div>
-</div>
-<div class="row mb-4">
-  <div class="col">
-    <button class="btn btn-primary" (click)="addemployerPaidCi('EmployerPaidCI')"> Employer Paid CI</button>
-  </div>
-  <div class="col">
-    <button class="btn btn-primary" > Voluntary CI
-    </button>
-  </div>
-  <div class="col">
-    <button class="btn btn-primary" >Vol Group Life</button>
-  </div>
-  <div class="col">
-    <button class="btn btn-primary">Basic Group Life</button>
-  </div>
-</div>
-    <!-- Product section -->
-    <div id="accordion">
-      <div class="card" *ngIf="accident == 'Accident'">
-        <div class="card-header" id="headingOne">
-          <h5 class="mb-0">
-            <button class="btn btn-primary collapsed" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-              Accident
-            
-            </button>
-          </h5>
+
+    <!-- <div id="accordion">
+      <div class="card">
+        <div class="card-header">
+          <a class="card-link" style="float: right;" data-toggle="collapse" href="#collapseOne">
+          </a>
         </div>
-    
-        <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
+        <div id="collapseOne" class="collapse" data-parent="#accordion">
           <div class="card-body">
-            <app-accident></app-accident>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
           </div>
         </div>
       </div>
-      <div class="card" *ngIf="fppg == 'FPPG'">
-        <div class="card-header" id="headingTwo">
-          <h5 class="mb-0">
-            <button class="btn btn-primary collapsed" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-              FPPG
-            </button>
-          </h5>
+      <div class="card">
+        <div class="card-header">
+          <a class="collapsed card-link" style="float: right;" data-toggle="collapse" href="#collapseTwo">
+          <mat-icon>add</mat-icon>
+        </a>
         </div>
-        <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
+        <div id="collapseTwo" class="collapse" data-parent="#accordion">
           <div class="card-body">
-            <app-fppg></app-fppg>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
           </div>
         </div>
       </div>
-      <div class="card"  *ngIf="hospitalIndemity == 'HospitalIndemnity'">
-        <div class="card-header" id="headingThree">
-          <h5 class="mb-0">
-            <button class="btn btn-primary collapsed" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseFour">
-              Hospital Indemnity
-            </button>
-          </h5>
+      <div class="card">
+        <div class="card-header">
+          <a class="collapsed card-link" style="float: right;" data-toggle="collapse" href="#collapseThree">
+            <mat-icon>add</mat-icon>
+          </a>
         </div>
-        <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordion">
+        <div id="collapseThree" class="collapse" data-parent="#accordion">
           <div class="card-body">
-            <app-hospital-indemnity></app-hospital-indemnity>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
           </div>
         </div>
       </div>
-      <div class="card"  *ngIf="fppIndivisual == 'FPPIndividual'">
-        <div class="card-header" id="headingFour">
-          <h5 class="mb-0">
-            <button class="btn btn-primary collapsed" data-toggle="collapse" data-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
-              FPP Individual 
-            </button>
-          </h5>
-        </div>
-        <div id="collapseFour" class="collapse" aria-labelledby="headingFour" data-parent="#accordion">
-          <div class="card-body">
-            <app-fpp-individual ></app-fpp-individual>
-          </div>
-        </div>
-      </div>
-      <div class="card"  *ngIf="employerPaidCi == 'EmployerPaidCI'">
-        <div class="card-header" id="headingFive">
-          <h5 class="mb-0">
-            <button class="btn btn-primary collapsed" data-toggle="collapse" data-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
-              Employer Paid CI
-            </button>
-          </h5>
-        </div>
-        <div id="collapseFive" class="collapse" aria-labelledby="headingFive" data-parent="#accordion">
-          <div class="card-body">
-            <app-employer-paid-ci></app-employer-paid-ci>
-          </div>
-        </div>
-      </div>
-      <!-- <div class="card"  *ngIf="hospitalIndemity == 'HospitalIndemnity'">
-        <div class="card-header" id="headingThree">
-          <h5 class="mb-0">
-            <button class="btn btn-primary collapsed" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-              Hospital Indemnity
-            </button>
-          </h5>
-        </div>
-        <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordion">
-          <div class="card-body">
-            <app-hospital-indemnity></app-hospital-indemnity>
-          </div>
-        </div>
-      </div>
-      <div class="card"  *ngIf="hospitalIndemity == 'HospitalIndemnity'">
-        <div class="card-header" id="headingThree">
-          <h5 class="mb-0">
-            <button class="btn btn-primary collapsed" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-              Hospital Indemnity
-            </button>
-          </h5>
-        </div>
-        <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordion">
-          <div class="card-body">
-            <app-hospital-indemnity></app-hospital-indemnity>
-          </div>
-        </div>
-      </div>
-      <div class="card"  *ngIf="hospitalIndemity == 'HospitalIndemnity'">
-        <div class="card-header" id="headingThree">
-          <h5 class="mb-0">
-            <button class="btn btn-primary collapsed" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-              Hospital Indemnity
-            </button>
-          </h5>
-        </div>
-        <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordion">
-          <div class="card-body">
-            <app-hospital-indemnity></app-hospital-indemnity>
-          </div>
-        </div>
-      </div> -->
     </div>
- 
+    -->
+  
+    <div class="container">
+      <div id="accordion" class="accordion">
+          <div class="card mt-2">
+              <div class="card-header collapsed" data-toggle="collapse" href="#collapseOne">
+                  <a class="card-title">
+                      Accident
+                  </a>
+              </div>
+              <div id="collapseOne" class="card-body collapse" data-parent="#accordion" >
+                <app-accident></app-accident>
+              </div>
+              <div class="card-header collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo">
+                  <a class="card-title">
+                    FPPG
+                  </a>
+              </div>
+              <div id="collapseTwo" class="card-body collapse" data-parent="#accordion" >
+                <app-fppg></app-fppg>
+              </div>
+              <div class="card-header collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseThree">
+                  <a class="card-title">
+                    Hospital Indemnity
+                  </a>
+              </div>
+              <div id="collapseThree" class="collapse" data-parent="#accordion" >
+                  <div class="card-body"><app-hospital-indemnity></app-hospital-indemnity>
+                  </div>
+              </div>
+              <div class="card-header collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseFour">
+                <a class="card-title">
+                  FPP Individual
+                </a>
+            </div>
+            <div id="collapseFour" class="collapse" data-parent="#accordion" >
+                <div class="card-body"><app-fpp-individual ></app-fpp-individual>
+                </div>
+            </div>
+            <div class="card-header collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseFive">
+              <a class="card-title">
+                Employer Paid CI
+              </a>
+          </div>
+          <div id="collapseFive" class="collapse" data-parent="#accordion" >
+              <div class="card-body"><app-employer-paid-ci></app-employer-paid-ci>
+              </div>
+          </div>
+          
+  </div>
     <button type="button" class="btn btn-success mt-4 mb-4" style="float: right;">Submit Group
       Setup Information</button>
   
