--- a/ClientApp/src/app/employer-paid-ci/employer-paid-ci.component.html
+++ b/ClientApp/src/app/employer-paid-ci/employer-paid-ci.component.html
@@ -1,53 +1,43 @@
-
- <div class="container">
-    <div class="row">
+<div class="container">
+  <div class="row">
     <div class="col-3">
-      <span class ="label label-default">Date</span>
-        <input type="date" class="form-control mb-2 " style="width: 100%;" 
-          placeholder="Employer Paid CI Effective
+      <span class="label label-default">Date</span>
+      <input type="date" [min]="minDate" class="form-control mb-2 " style="width: 100%;" placeholder="Employer Paid CI Effective
           Date">
-    
+
     </div>
-      
-        <div class="col-3">
-          <span class ="label label-default"> Employer Paid Ci Situs
-            State</span>
-          <select class="form-control " id="inlineFormCustomSelectPref">
-            <option selected>SelectSitus State</option>
-            <option value="1"> Employer Paid Ci Situs
-                State</option>
-          </select>
-        </div>
-    </div>
+
+    <div class="col-3">
+      <span class="label label-default"> Employer Paid Ci Situs
+        State</span>
+      <select class="form-control" [disabled] = "!lookupSitusState" id="inlineFormCustomSelectPref">
+        <option selected>{{ lookupSitusState }}</option>
+      </select>
+      <div *ngIf="lookupSitusState == ''">
+        <span style="color: red;">  <small><strong>Select Situs State!</strong></small></span>
       </div>
-      <div class="row" style="margin-left: 1px;">
-      
-        <div class="col-3">
-          <input class="form-check-input" type="radio" name="Radios" id="Radios1" value="option1" checked>
-          
-                    <input type="text" class="form-control mb-2 " style="width: 100%;" 
-                      placeholder="Spouse Standard Face
+    </div>
+  </div>
+</div>
+<div class="row" style="margin-left: 1px;">
+
+  <div class="col-3">
+    <input class="form-check-input" type="radio" name="Radios" id="Radios1" value="option1" checked>
+
+    <input type="text" class="form-control mb-2 " style="width: 100%;" placeholder="Spouse Standard Face
                       Amount
                       ">
-        </div>
-        <div class="col-3">
-          <input class="form-check-input" type="radio" name="Radios" id="Radios1" value="option1" checked>
-                    <input type="text" class="form-control mb-2 " style="width: 100%;" 
-                      placeholder="Employee Standard Face
+  </div>
+  <div class="col-3">
+    <input class="form-check-input" type="radio" name="Radios" id="Radios1" value="option1" checked>
+    <input type="text" class="form-control mb-2 " style="width: 100%;" placeholder="Employee Standard Face
                       Amount">
-        </div>
-        <div class="col-3">
-        
-                    <input type="text" class="form-control mb-2 " style="width: 100%;" 
-                      placeholder="Child Standard Face Amount">
-        </div>
-        
-        </div>
-        
-         <app-agent-setup></app-agent-setup>
-     
-    
-    
-       
-    
-       
+  </div>
+  <div class="col-3">
+
+    <input type="text" class="form-control mb-2 " style="width: 100%;" placeholder="Child Standard Face Amount">
+  </div>
+
+  <app-agent-setup></app-agent-setup>
+
+</div>
