--- a/ClientApp/src/app/group-setup/group-setup.component.html
+++ b/ClientApp/src/app/group-setup/group-setup.component.html
@@ -1,5 +1,5 @@
 <div class="d-flex justify-content-center"  *ngIf="!isLoading">
-  <div class="spinner-border" style="width: 8rem; height: 8rem; color: #ff6363;" >
+  <div class="spinner-border" style="width: 8rem; height: 8rem; color: #ff6363; margin-top: 15%;" >
     <span class="sr-only">Loading...</span>
   </div>
 </div>
