--- a/ClientApp/src/app/footer/footer.component.html
+++ b/ClientApp/src/app/footer/footer.component.html
@@ -1,4 +1,4 @@
-<div class="footer mt-4">
+<div class="footer mt-4" *ngIf="data">
     <div class="footer-inner">
         <div class="footer-content">
            <p>©
