Active Inactive button added

--- a/ClientApp/src/app/accident/accident.component.html
+++ b/ClientApp/src/app/accident/accident.component.html
@@ -15,6 +15,15 @@
         <span style="color: red;">  <small><strong>Select Situs State!</strong></small></span>
       </div>
     </div>
+    <div class="col-3">
+      <span class="label">On or Off the Job</span>
+      <select class="form-control">
+        <option selected>Text</option>
+        <option>On the Job Only</option>
+        <option >Off the Job Only</option>
+      </select>
+    
+    </div>
   </div>
 </div>
 <div class="container">
