--- a/ClientApp/src/app/group-setup/group-setup.component.html
+++ b/ClientApp/src/app/group-setup/group-setup.component.html
@@ -1,3 +1,9 @@
+
+<div class="container">
+ 
+<input type="checkbox" checked data-toggle="toggle" data-on="Active" data-off="Inactive" data-onstyle="success" data-offstyle="danger">
+</div>
+
 <div class="d-flex justify-content-center"  *ngIf="!isLoading">
   <div class="spinner-border" style="width: 8rem; height: 8rem; color: #ff6363; margin-top: 15%;" >
     <span class="sr-only">Loading...</span>
