--- a/ClientApp/src/app/vol-group-life/vol-group-life.component.html
+++ b/ClientApp/src/app/vol-group-life/vol-group-life.component.html
@@ -1,1 +1,64 @@
-<p>vol-group-life works!</p>
+<div class="container">
+    <div class="row">
+        <div class="col-3">
+            <span class="label label-default">VGL Effective Date</span>
+            <input type="date" [min]="minDate" class="form-control mb-2 " style="width: 100%;"
+                placeholder="VGL Effective Date">
+        </div>
+        <div class="col-3">
+            <span class="label">VGL Situs State</span>
+            <select class="form-control" [disabled]="!lookupSitusState" id="inlineFormCustomSelectPref">
+                <option selected>{{ lookupSitusState }}</option>
+            </select>
+            <div *ngIf="lookupSitusState == ''">
+                <span style="color: red;"> <small><strong>Select Situs State!</strong></small></span>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-3">
+            <span class="label">AD&D Rider </span>
+            <select class="form-control">
+                <option selected value="Y">Y</option>
+                <option value="N">N</option>
+            </select>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-3">
+            <input class="form-check-input" type="radio" name="Radios" id="Radios1" value="option1" checked>
+            <input type="text" class="form-control mb-2 " style="width: 100%;" placeholder="Employee GI Amount">
+        </div>
+        <div class="col-3">
+            <input class="form-check-input" type="radio" name="Radios" id="Radios1" value="option1" checked>
+            <input type="text" class="form-control mb-2 " style="width: 100%;" placeholder="Employee Max Amount">
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-3">
+            <input class="form-check-input" type="radio" name="Radios" id="Radios1" value="option1" checked>
+            <input type="text" class="form-control mb-2 " style="width: 100%;" placeholder="Spouse GI Amount">
+        </div>
+        <div class="col-3">
+            <input class="form-check-input" type="radio" name="Radios" id="Radios1" value="option1" checked>
+            <input type="text" class="form-control mb-2 " style="width: 100%;" placeholder="Spouse Max Amount">
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-3">
+            <input class="form-check-input" type="radio" name="Radios" id="Radios1" value="option1" checked>
+            <input type="text" class="form-control mb-2 " style="width: 100%;" placeholder="Child GI Amount">
+        </div>
+        <div class="col-3">
+            <input class="form-check-input" type="radio" name="Radios" id="Radios1" value="option1" checked>
+            <input type="text" class="form-control mb-2 " style="width: 100%;" placeholder="Child Max Amount">
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-3">
+            <input class="form-check-input" type="radio" name="Radios" id="Radios1" value="option1" checked>
+            <input type="text" class="form-control mb-2 " style="width: 100%;" placeholder="Open Enrollment GI">
+        </div>
+    </div>
+</div>
+<app-agent-setup></app-agent-setup>
