--- a/ClientApp/src/app/voluntary-ci/voluntary-ci.component.html
+++ b/ClientApp/src/app/voluntary-ci/voluntary-ci.component.html
@@ -1,1 +1,70 @@
-<p>voluntary-ci works!</p>
+<div class="container">
+    <div class="row">
+        <div class="col-3">
+            <span class="label label-default">Voluntary CI Effective Date</span>
+            <input type="date" [min]="minDate" class="form-control mb-2 " style="width: 100%;"
+                placeholder="Voluntary CI Effective Date">
+        </div>
+        <div class="col-3">
+            <span class="label">Voluntary CI Situs State</span>
+            <select class="form-control" [disabled]="!lookupSitusState" id="inlineFormCustomSelectPref">
+                <option selected>{{ lookupSitusState }}</option>
+            </select>
+            <div *ngIf="lookupSitusState == ''">
+                <span style="color: red;"> <small><strong>Select Situs State!</strong></small></span>
+            </div>
+        </div>
+        <div class="col-3">
+            <span class="label label-default">Plan Code</span>
+            <input type="text" [min]="minDate" class="form-control mb-2 " style="width: 100%;" placeholder="Plan Code">
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-3">
+            <input class="form-check-input" type="radio" name="Radios" id="Radios1" value="option1" checked>
+            <input type="text" class="form-control mb-2 " style="width: 100%;" placeholder="Employee GI Amount">
+        </div>
+        <div class="col-3">
+            <input class="form-check-input" type="radio" name="Radios" id="Radios1" value="option1" checked>
+            <input type="text" class="form-control mb-2 " style="width: 100%;" placeholder="Employee Max Amount">
+        </div>
+        <div class="col-3">
+            <span class="label">Tobacco/Non Options</span>
+              <mat-form-field>
+                <mat-select placeholder="Tobacco/Non Option" multiple>
+                  <mat-option>Employee NTB</mat-option>
+                  <mat-option>Employee TB</mat-option>
+                   <mat-option >Spouse NTB</mat-option>
+                    <mat-option>Spouse TB</mat-option>
+                </mat-select>
+              </mat-form-field>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-3">
+            <input class="form-check-input" type="radio" name="Radios" id="Radios1" value="option1" checked>
+            <input type="text" class="form-control mb-2 " style="width: 100%;" placeholder="Spouse GI Amount">
+        </div>
+        <div class="col-3">
+            <input class="form-check-input" type="radio" name="Radios" id="Radios1" value="option1" checked>
+            <input type="text" class="form-control mb-2 " style="width: 100%;" placeholder="Spouse Max Amount">
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-3">
+            <input class="form-check-input" type="radio" name="Radios" id="Radios1" value="option1" checked>
+            <input type="text" class="form-control mb-2 " style="width: 100%;" placeholder="Child GI Amount">
+        </div>
+        <div class="col-3">
+            <input class="form-check-input" type="radio" name="Radios" id="Radios1" value="option1" checked>
+            <input type="text" class="form-control mb-2 " style="width: 100%;" placeholder="Child Max Amount">
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-3">
+            <input class="form-check-input" type="radio" name="Radios" id="Radios1" value="option1" checked>
+            <input type="text" class="form-control mb-2 " style="width: 100%;" placeholder="Open Enrollment GI">
+        </div>
+    </div>
+</div>
+<app-agent-setup></app-agent-setup>
